add main_test
- fixed detected issues
